<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dark Tower</string>
    <string name="exit">Exit</string>
	<string name="yesBuyButton">Yes/Buy</string>  
	<string name="start_startGame">Play</string>  
	<string name="start_howToPlay">How to play</string>  
	<string name="start_title">Dark Tower for Android</string>
	<string name="menu_start">Start game</string>  
	<string name="menu_exit">Exit</string>  
	<string name="player_human">Human</string>  
	<string name="player_computer">Computer</string>  
	<string name="player_none">Not playing</string>  
	<string name="player1">Player 1</string>  
	<string name="player2">Player 2</string>  
	<string name="player3">Player 3</string>  
	<string name="player4">Player 4</string> 
	<string name="mute_sound">Mute sound</string>
	<string name="fast_display_computer">Show computer\&apos;s turn quickly</string> 
	<string name="original_board">Use original board and pieces</string> 
	<string name="start_desc">Android tablet version of the board game Dark Tower by Milton Bradley. This game is based on code from the PC version by Michael Bommer.\nThis project is also open source, visit http://code.google.com/p/dark-tower-for-android/ to let us know of any bugs or to help out.</string>
</resources>
