<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/brasskey"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleX=".8"
            android:scaleY=".8"
             />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/silverkey"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" 
            android:scaleX=".8"
            android:scaleY=".8"
            />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/goldkey"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" 
            android:scaleX=".8"
            android:scaleY=".8"
            />
        
	</LinearLayout>
    <!-- 
    <TextView 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:id="@+id/textView1" 
        android:layout_marginBottom="30dp" 
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:gravity="center_horizontal"
        android:textSize="48dp" 
        android:text="@string/app_name"></TextView>
        
 -->        
    
    <!-- 
    <ImageView android:src="@drawable/twixt" android:layout_alignParentTop="true" android:layout_marginBottom="25dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/imageView1"></ImageView>
     -->

    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center">
	    
	    <LinearLayout
	        android:layout_margin="25dp"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="top">
		    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="28dp"
	            android:text="@string/player1" />
   	        <RadioGroup
		        android:id="@+id/player1RadioGroup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <RadioButton
		            android:id="@+id/player1_human"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/player_human" />
		
		        <RadioButton
		            android:id="@+id/player1_computer"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_computer" />
		
		        <RadioButton
		            android:id="@+id/player1_none"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_none" />
		
		    </RadioGroup>
		    
	    </LinearLayout>

	    <LinearLayout
	        android:layout_margin="25dp"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="top">
		    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="28dp"
	            android:text="@string/player2" />
		    <RadioGroup
		        android:id="@+id/player2RadioGroup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <RadioButton
		            android:id="@+id/player2_human"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_human" />
		
		        <RadioButton
		            android:id="@+id/player2_computer"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/player_computer" />
		
		        <RadioButton
		            android:id="@+id/player2_none"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_none" />
		
		    </RadioGroup>
    	</LinearLayout>			
		        
	    <LinearLayout
	        android:layout_margin="25dp"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="top">
		    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="28dp"
	            android:text="@string/player3" />
		    <RadioGroup
		        android:id="@+id/player3RadioGroup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <RadioButton
		            android:id="@+id/player3_human"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_human" />
		
		        <RadioButton
		            android:id="@+id/player3_computer"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_computer" />
		
		        <RadioButton
		            android:id="@+id/player3_none"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/player_none" />
		
		    </RadioGroup>
	    </LinearLayout>
	        
	    <LinearLayout
	        android:layout_margin="25dp"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="top">
		    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="28dp"
	            android:text="@string/player4" />
		    <RadioGroup
		        android:id="@+id/player4RadioGroup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
	
		        <RadioButton
		            android:id="@+id/player4_human"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_human" />
		
		        <RadioButton
		            android:id="@+id/player4_computer"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/player_computer" />
		
		        <RadioButton
		            android:id="@+id/player4_none"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/player_none" />

	    	</RadioGroup>
    	</LinearLayout>
        
     </LinearLayout>

    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginBottom="5dp">
	    <CheckBox
	        android:id="@+id/mute_sound"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mute_sound" 
	        android:layout_marginRight="15dp"/>
	
	    <CheckBox
	        android:id="@+id/fast_display_computer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/fast_display_computer" 
	        android:layout_marginLeft="15dp"/>
    </LinearLayout>
    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginBottom="18dp">
	    <CheckBox
	        android:id="@+id/original_board"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/original_board" 
	        android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginBottom="18dp">
	    <Button android:layout_marginLeft="25dp" android:id="@+id/menu_start" android:layout_height="wrap_content" android:layout_width="230dp" android:text="@string/menu_start" android:layout_gravity="center_horizontal"></Button>
	    <Button android:layout_marginRight="25dp" android:id="@+id/menu_exit" android:layout_height="wrap_content" android:layout_width="230dp" android:text="@string/menu_exit" android:layout_gravity="center_horizontal"></Button>
	    	</LinearLayout>
	
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleX=".9"
            android:scaleY=".9"
            android:src="@drawable/sword" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/victory"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wizard"
            android:scaleX=".9"
            android:scaleY=".9"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        
	</LinearLayout>
    
</LinearLayout>