<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
    <ImageView android:src="@drawable/logo" 
        android:layout_alignParentTop="true" 
        android:layout_marginBottom="22dp" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal" 
        android:id="@+id/imageView1"/>
    <!-- 
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_marginBottom="30dp" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center_horizontal" android:text="@string/start_title"></TextView>
    <WebView android:id="@+id/desc" android:layout_marginBottom="30dp" android:layout_marginTop="30dp" android:layout_marginRight="120dp" android:layout_marginLeft="120dp" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
     -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/start_desc"
        android:textSize="17dp"
    	android:layout_gravity="center_horizontal"
         />

    <Button 
    	android:text="@string/start_startGame" 
    	android:id="@+id/start_startGame" 
    	android:layout_marginTop="25dp" 
    	android:layout_width="230dp" 
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    />
    <Button 
    	android:text="@string/start_howToPlay" 
    	android:id="@+id/start_howToPlay" 
    	android:layout_marginTop="25dp" 
    	android:layout_width="230dp" 
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    />
</LinearLayout>
